...
                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="logo_clube_walmart_azul" translatesAutoresizingMaskIntoConstraints="NO" id="Sde-uB-OzP">
                                    <rect key="frame" x="41" y="28" width="294" height="30"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="30" id="lXJ-zd-2lO"/>
                                    </constraints>
                                </imageView>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail, CPF ou CNPJ" minimumFontSize="13" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="qrt-Iv-5yA" customClass="WMFloatLabelMaskedTextField">
                                    <rect key="frame" x="30" y="88" width="315" height="44"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="44" id="Zbl-9G-9l3"/>
                                    </constraints>
                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="13"/>
...
                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="txtUser"/>
                                    </userDefinedRuntimeAttributes>
                                    <connections>
                                        <outlet property="delegate" destination="-1" id="kAB-IH-mKX"/>
                                    </connections>
                                </textField>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Senha" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="Dou-cp-ylG" customClass="WMPwdTextField">
                                    <rect key="frame" x="30" y="142" width="315" height="44"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="44" id="XWZ-eK-kS1"/>
                                    </constraints>
                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="13"/>
                                    <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="txtPassword"/>
                                    </userDefinedRuntimeAttributes>
                                    <connections>
                                        <outlet property="delegate" destination="-1" id="l6E-HA-GGd"/>
                                    </connections>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="46">
...
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHH-vS-MLg" userLabel="BtEntrar" customClass="WMButtonRounded">
                                    <rect key="frame" x="30" y="258" width="315" height="44"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="44" id="s2I-7h-43x"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="15"/>
                                    <state key="normal" title="Entrar">
                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </state>
                                    <state key="highlighted">
                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </state>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btnLogin"/>
                                        <userDefinedRuntimeAttribute type="number" keyPath="roundedButtonStyle">
                                            <integer key="value" value="8"/>
                                        </userDefinedRuntimeAttribute>
                                    </userDefinedRuntimeAttributes>
                                    <connections>
                                        <action selector="login" destination="-1" eventType="touchUpInside" id="7oP-k5-r79"/>
...
