...
                            <rect key="frame" x="217" y="15" width="177" height="44"/>
                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="44" id="U4y-Lf-Deg"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
                            <state key="normal" title="Ver ofertas">
                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                            </state>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btnSales"/>
                                <userDefinedRuntimeAttribute type="number" keyPath="roundedButtonStyle">
                                    <integer key="value" value="2"/>
                                </userDefinedRuntimeAttribute>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="goToOffersButtonPressed" destination="-1" eventType="touchUpInside" id="mXm-03-2HT"/>
...
