...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P9N-0d-2sf">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                            <inset key="contentEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                            <state key="normal" title="Entre ou Cadastre-se">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
                                            <connections>
                                                <action selector="presentMyAccount" destination="-1" eventType="touchUpInside" id="7of-3R-lfx"/>
                                            </connections>
                                        </button>
...
                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Olá," lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDn-Dc-eu2">
                                            <rect key="frame" x="99" y="32" width="207" height="21"/>
                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="18"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="txtUserName"/>
                                            </userDefinedRuntimeAttributes>
                                        </label>
                                    </subviews>
                                    <constraints>
                                        <constraint firstAttribute="trailing" secondItem="KDn-Dc-eu2" secondAttribute="trailing" constant="69" id="1Sy-Mi-QQa"/>
                                        <constraint firstItem="9uM-3p-ORS" firstAttribute="top" secondItem="37D-O6-rBH" secondAttribute="top" id="7F4-6X-EBz"/>
...
