...
                                <constraint firstAttribute="width" constant="60" id="nls-Zx-oj2"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="12"/>
                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="4"/>
                            <inset key="titleEdgeInsets" minX="-18" minY="24" maxX="0.0" maxY="2"/>
                            <inset key="imageEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="15"/>
                            <state key="normal" title="Remover" image="ic_fav_remover"/>
                            <connections>
                                <action selector="tappedRemove:" destination="-1" eventType="touchUpInside" id="WaJ-vp-Aqg"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uwd-ts-pxd">
                            <rect key="frame" x="460" y="0.0" width="60" height="44"/>
...
